--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -13,6 +13,7 @@ logging:
     console: '%clr(%d{E HH:mm:ss.SSS}){blue} %clr(%-5p) %clr(${PID}){faint} %clr(---){faint}
               %clr([%8.15t]){cyan} %clr(%-40.40logger{0}){blue} %clr(:){red} %clr(%m){faint}%n'
 spring:
+  profiles: dev
   datasource:
     hikari:
       auto-commit: false
@@ -38,13 +39,6 @@ spring:
       enabled: true
     restart:
       enabled: true
-  h2:
-    console:
-      enabled: true
-      path: /h2-console
-      settings:
-        trace: false
-        web-allow-others: false
   jpa:
     database: mysql
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
@@ -52,3 +46,10 @@ spring:
       # 禁用 hibernate 的表结构自动更新
       ddl-auto: update
     show-sql: true
+  ldap:
+    base: dc=volcano,dc=com
+    embedded:
+      base-dn: dc=volcano,dc=com
+      ldif: classpath:test-ldap-server.ldif
+      port: 389
+    urls: ldap://localhost:389/
