--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,3 +21,7 @@ spring:
     active: "dev"
   resources:
     add-mappings: false
+volcano:
+  jwt:
+    access-token-expire-time: 300000
+    refresh-token-expire-time: 25920000000
