--- a/volcano-start/pom.xml
+++ b/volcano-start/pom.xml
@@ -14,8 +14,21 @@
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
+        <skipTests>true</skipTests>
     </properties>
     <dependencies>
+        <!-- Querydsl 依赖 -->
+        <dependency>
+            <groupId>com.querydsl</groupId>
+            <artifactId>querydsl-apt</artifactId>
+            <version>${querydsl.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.querydsl</groupId>
+            <artifactId>querydsl-jpa</artifactId>
+            <version>${querydsl.version}</version>
+        </dependency>
         <!-- Spring Email -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -171,6 +184,11 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>com.querydsl</groupId>
+            <artifactId>querydsl-core</artifactId>
+            <version>4.3.1</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -179,6 +197,31 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>com.mysema.maven</groupId>
+                <artifactId>apt-maven-plugin</artifactId>
+                <version>1.1.3</version>
+                <executions>
+                    <execution>
+                        <id>generate QueryDsl classes</id>
+                        <phase>generate-sources</phase>
+                        <goals>
+                            <goal>process</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>target/generated-sources</outputDirectory>
+                            <processor>com.querydsl.apt.QuerydslAnnotationProcessor</processor>
+                        </configuration>
+                    </execution>
+                </executions>
+                <dependencies>
+                    <dependency>
+                        <groupId>com.querydsl</groupId>
+                        <artifactId>querydsl-apt</artifactId>
+                        <version>${querydsl.version}</version>
+                    </dependency>
+                </dependencies>
             </plugin>
             <plugin>
                 <artifactId>maven-resources-plugin</artifactId>
@@ -205,6 +248,13 @@
                         </configuration>
                     </execution>
                 </executions>
+                <dependencies>
+                    <dependency>
+                        <groupId>com.querydsl</groupId>
+                        <artifactId>querydsl-apt</artifactId>
+                        <version>${querydsl.version}</version>
+                    </dependency>
+                </dependencies>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -219,6 +269,32 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>com.devskiller.jpa2ddl</groupId>
+                <artifactId>jpa2ddl-maven-plugin</artifactId>
+                <version>0.9.12</version>
+                <extensions>true</extensions> <!-- required to run automatically -->
+                <configuration>
+                    <outputPath>${basedir}/src/main/resources/schema-mysql.sql</outputPath>
+                    <packages>
+                        <package>com.ziyear.volcano.domain</package>
+                    </packages>
+                    <jpaProperties>
+                        <property>
+                            <name>hibernate.dialect</name>
+                            <value>org.hibernate.dialect.MySQL5InnoDBDialect</value>
+                        </property>
+                        <property>
+                            <name>hibernate.default_schema</name>
+                            <value>volcano</value>
+                        </property>
+                    </jpaProperties>
+                    <formatOutput>true</formatOutput>
+                    <skipSequences>true</skipSequences>
+                    <delimiter>;</delimiter>
+                    <action>UPDATE</action>
+                </configuration>
             </plugin>
         </plugins>
     </build>
