--- a/volcano-start/pom.xml
+++ b/volcano-start/pom.xml
@@ -198,23 +198,11 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+            <!--引入querydsl代码生成器插件-->
             <plugin>
                 <groupId>com.mysema.maven</groupId>
                 <artifactId>apt-maven-plugin</artifactId>
                 <version>1.1.3</version>
-                <executions>
-                    <execution>
-                        <id>generate QueryDsl classes</id>
-                        <phase>generate-sources</phase>
-                        <goals>
-                            <goal>process</goal>
-                        </goals>
-                        <configuration>
-                            <outputDirectory>target/generated-sources</outputDirectory>
-                            <processor>com.querydsl.apt.QuerydslAnnotationProcessor</processor>
-                        </configuration>
-                    </execution>
-                </executions>
                 <dependencies>
                     <dependency>
                         <groupId>com.querydsl</groupId>
@@ -222,6 +210,18 @@
                         <version>${querydsl.version}</version>
                     </dependency>
                 </dependencies>
+                <executions>
+                    <!--设置插件生效的maven生命周期-->
+                    <execution>
+                        <goals>
+                            <goal>process</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>src/generated-sources/java/</outputDirectory>
+                            <processor>com.querydsl.apt.jpa.JPAAnnotationProcessor</processor>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
             <plugin>
                 <artifactId>maven-resources-plugin</artifactId>
